add create new document feature

--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,7 +1,7 @@
 <form action="/<%= @filename %>" method="post" id="edit_form">
   <label for="file_content">Edit content of <%= @filename %></label>
   <div>
-    <textarea name="file_content" id="content" rows="20" cols="100"><%= @content %></textarea>
+    <textarea name="file_content" id="file_content" rows="20" cols="100"><%= @content %></textarea>
   </div>
   <button type="submit">Save changes</button>
 </form>
